<resources>
    <string name="app_name">UserAuthentication</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="msg_loading">Loading...</string>
    <string name="title">Task title</string>
    <string name="task_date">Task date</string>
    <string name="desc">Task Description</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="action_discard">Discard</string>
    <string name="delete_dialog_msg">Delete this Schedule?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
</resources>
