<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_weight="2"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editTaskTitle"
                android:layout_width="@dimen/fieldWidth"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/field_height"
                android:ems="5"
                android:layout_marginTop="25dp"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp"
                android:background="@drawable/border"
                android:hint="@string/title"
                android:layout_marginVertical="10dp"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="setDate"
            android:id="@+id/date"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_view_day_grey600_24dp"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:layout_toRightOf="@id/date_icon"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/set_date"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="setTime"
            android:id="@+id/time"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_access_time_grey600_24dp"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="70dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/time_icon"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/time_text"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/set_time"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:layout_weight="2"
                android:text="@string/desc" />

            <EditText
                android:id="@+id/description"
                android:layout_width="@dimen/fieldWidth"
                android:layout_gravity="center_horizontal"
                android:layout_height="150dp"
                android:ems="5"
                android:layout_marginTop="25dp"
                android:inputType="textMultiLine"
                android:maxLines="50"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp"
                android:background="@drawable/border"
                android:hint="@string/desc"
                android:layout_marginVertical="10dp"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/text"
            android:background="@color/colorPrimary"
            android:text="@string/submit"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>